--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 /*  your css code here. If applicable */
+ table {
+            width: 100%;
+            border-collapse: collapse;
+            border: 1px solid orange;
+        }
+        th, td {
+            border: 1px solid orange;
+            text-align: center;
+            padding: 3px 5px;
+        }
+        th {
+            background-color: #888888;
+            color: white;
+        }
+        .sub-total-row .sub-total-text {
+            text-align: right;
+        }
