--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
  table {
             width: 100%;
             border-collapse: collapse;
-            border: 1px solid orange;
+	        border-width: 0px 0px 1px 1px solid orange;
         }
         th, td {
             border: 1px solid orange;
