--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@
  table {
             width: 100%;
             border-collapse: collapse;
-	        border-width: 0px 0px 1px 1px solid orange;
+	        border: 1px solid orange;
+            border-width: 0 0 1px 1px;
         }
         th, td {
-            border: 1px solid orange;
+             border: 1px solid orange;
+             border-width: 0 0 1px 1px;
             text-align: center;
             padding: 3px 5px;
         }
