--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
             width: 100%;
             border-collapse: collapse;
 	        border: 1px solid orange;
-            border-width: 1px 1px 0 0;
+            border-width: 0px 0px 1px 1px;
         }
         th, td {
              border: 1px solid orange;
