--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
         }
         th, td {
              border: 1px solid orange;
-             border-width: 0 0 1px 1px;
+             border-width: 1px 1px 0px 0px;
             text-align: center;
             padding: 3px 5px;
         }
