--- a/styles.css
+++ b/styles.css
@@ -17,5 +17,5 @@
             color: white;
         }
         .sub-total-row .sub-total-text {
-            text-align: center;
+            text-align: right;
         }
